--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
+
+{% load staticfiles %}
+
 <html>
 
     <head>
         <title>Licenta</title>
+        <script src="{% static "js/main.js" %}"></script> <!-- JavaScript -->
     </head>
 
     <body>
