--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -7,6 +7,7 @@
     <head>
         <title>Licenta</title>
         <script src="{% static "js/main.js" %}"></script> <!-- JavaScript -->
+        <script type="text/javascript" src='{% static 'jquery/dist/jquery.js' %}'></script>
     </head>
 
     <body>
