--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -7,12 +7,18 @@
     <head>
         <title>Licenta</title>
         <script type="text/javascript" src='{% static 'jquery/dist/jquery.js' %}'></script>
+        <script type="text/javascript" src='{% static 'react/react.js' %}'></script>
+        <script type="text/javascript" src='{% static 'react/JSXTransformer.js' %}'></script>
+
         <script src="{% static "js/main.js" %}"></script> <!-- JavaScript -->
+        <script type="text/jsx" src="{% static "js/react_code.js" %}"></script> <!-- JavaScript -->
     </head>
 
     <body>
         <h1>Wololo says...</h1>
         hello world! <strong>{{ boldmessage }}</strong><br />
+        <div id="content"></div>
+
     </body>
 
 </html>
