Added initial React objects. Copied ajax request function

--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -11,13 +11,11 @@
         <script type="text/javascript" src='{% static 'react/JSXTransformer.js' %}'></script>
 
         <script src="{% static "js/main.js" %}"></script> <!-- JavaScript -->
-        <script type="text/jsx" src="{% static "js/react_code.js" %}"></script> <!-- JavaScript -->
+        <script type="text/jsx" src="{% static "js/react_code.jsx" %}"></script> <!-- JavaScript -->
     </head>
 
     <body>
-        <h1>Wololo says...</h1>
-        hello world! <strong>{{ boldmessage }}</strong><br />
-        <div id="content"></div>
+        <div id="content" align="center"></div>
 
     </body>
 
