--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -11,7 +11,7 @@
         <script type="text/javascript" src='{% static 'react/JSXTransformer.js' %}'></script>
 
         <script src="{% static "js/main.js" %}"></script> <!-- JavaScript -->
-        <script type="text/jsx" src="{% static "js/react_code.jsx" %}"></script> <!-- JavaScript -->
+        <script type="text/jsx" src="{% static "js/react_code.js" %}"></script> <!-- JavaScript -->
     </head>
 
     <body>
