--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -12,7 +12,12 @@
 </head>
 
 <body>
-  <div id="content" class="container" align="center"></div>
+<div class="container-fluid">
+  <div class="row">
+  <div id="content" class="col-md-6"></div>
+  <div id="editPanel" class="col-md-6"></div>
+  </div>
+</div>
 
   <script type="text/jsx" src="{% static "js/react_code.js" %}"></script> <!-- JavaScript -->
   <script type="text/javascript" src='{% static 'jquery/dist/jquery.js' %}'></script>
