Added generic react rendering

--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -21,6 +21,7 @@
 
   <script type="text/jsx" src="{% static "js/react_code.js" %}"></script> <!-- JavaScript -->
   <script type="text/javascript" src='{% static 'jquery/dist/jquery.js' %}'></script>
+  <script type="text/javascript" src='{% static 'lodash/lodash.js' %}'></script>
   <script src="{% static "js/main.js" %}"></script> <!-- JavaScript -->
 
 </body>
