Added react-with-addons. Repaired AddForm POST bug. Changed api to always return something on POST

--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -7,7 +7,7 @@
 <head>
   <title>Licenta</title>
   <link rel="stylesheet" type="text/css" href="{% static "bootstrap/dist/css/bootstrap.css" %}" />
-  <script type="text/javascript" src='{% static 'react/react.js' %}'></script>
+  <script type="text/javascript" src='{% static 'react/react-with-addons.js' %}'></script>
   <script type="text/javascript" src='{% static 'react/JSXTransformer.js' %}'></script>
 </head>
 
@@ -27,3 +27,4 @@
 </body>
 
 </html>
+
