--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -13,9 +13,7 @@
 
 <body>
 <div class="container-fluid">
-  <div class="row">
-  <div id="content" class="col-md-8"></div>
-  <div id="editPanel" class="col-md-4"></div>
+  <div id="content" class="row">
   </div>
 </div>
 
