Camp datetime modificabil (cu plugin js fancy)

--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -7,6 +7,7 @@
 <head>
   <title>Licenta</title>
   <link rel="stylesheet" type="text/css" href="{% static "bootstrap/dist/css/bootstrap.css" %}" />
+  <link rel="stylesheet" href="{% static "eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" %}" />
 </head>
 
 <body>
@@ -19,6 +20,9 @@
   <script type="text/javascript" src='{% static 'react/react-with-addons.js' %}'></script>
   <script type="text/javascript" src='{% static 'jquery/dist/jquery.js' %}'></script>
   <script type="text/javascript" src='{% static 'lodash/lodash.js' %}'></script>
+   <script type="text/javascript" src='{% static 'moment/min/moment.min.js' %}'></script>
+   <script type="text/javascript" src='{% static 'eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js' %}'></script>
+   <script type="text/javascript" src='{% static 'bootstrap/dist/js/bootstrap.min.js' %}'></script>
 
   {# // <script type="text/jsx" src="{% static "js/react_code.js" %}"></script> <!-- JavaScript --> #}
   <script type="text/javascript" src="{% static "js/react_code.js" %}"></script>
