--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -6,13 +6,15 @@
 
 <head>
   <title>Licenta</title>
+  <link rel="stylesheet" type="text/css" href="{% static "css/equal-height-columns.css" %}" />
+
   <link rel="stylesheet" type="text/css" href="{% static "bootstrap/dist/css/bootstrap.css" %}" />
   <link rel="stylesheet" href="{% static "eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" %}" />
 </head>
 
-<body>
+<body style="padding-top: 70px;">
   <div class="container-fluid">
-    <div id="content" class="row">
+    <div id="content">
     </div>
   </div>
 
