--- a/posts/static/css/equal-height-columns.css
+++ b/posts/static/css/equal-height-columns.css
@@ -1,4 +1,4 @@
-*, *:before, *:after {box-sizing:  border-box !important;}
+/**, *:before, *:after {box-sizing:  border-box !important;}
 
 
 .row {
@@ -14,4 +14,12 @@
  margin:  .5em;
  padding:  0;
  width:98%;
+}*/
+
+/*.GenericForm{
+  display: -webkit-flex;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: stretch;
 }
+*/
