Fix explored:false la relatedcomponent. Fix edit pe user/authorization

--- a/posts/static/css/equal-height-columns.css
+++ b/posts/static/css/equal-height-columns.css
@@ -16,10 +16,13 @@
  width:98%;
 }*/
 
-/*.GenericForm{
-  display: -webkit-flex;
+/*.parent{
   display: flex;
+  display: -webkit-flex;
   flex-wrap: wrap;
   align-items: stretch;
 }
-*/
+
+.childul{
+  width: 30%;
+}*/
