Working Flexbox. Working datetimepicker. Moved addpanel to formlist

--- a/posts/static/css/equal-height-columns.css
+++ b/posts/static/css/equal-height-columns.css
@@ -16,13 +16,18 @@
  width:98%;
 }*/
 
-/*.parent{
+.parent{
   display: flex;
   display: -webkit-flex;
   flex-wrap: wrap;
-  align-items: stretch;
+  flex-direction: row;
+  justify-content:space-around;
 }
 
 .childul{
   width: 30%;
-}*/
+}
+
+.editor-datetime {
+      position: relative;
+}
